@@ -1,3 +1,9 @@
+Wed Sep 23 14:22:20 UTC 2009 Juergen Kahrs <jkahrs@users.sourceforge.net>
+
+	Sync with savannah gawk cvsps 249.
+
+	* eval.c (func_call): Save nloops_active.
+
 Tue Apr  7 14:50:07 UTC 2009 Juergen Kahrs <jkahrs@users.sourceforge.net>
 
 	Sync with savannah gawk cvsps 246.
